added interconectiviti and generate object

--- a/Pages/areaOf.html
+++ b/Pages/areaOf.html
@@ -43,7 +43,7 @@
                     <a href="">
                         <li class="header-nav-element">Sobre ET</li>
                     </a>
-                    <a href="">
+                    <a href="./methods.html">
                         <li class="header-nav-element">Metodos</li>
                     </a>
                 </ul>
@@ -74,53 +74,53 @@
                         <li class="methods-element">areaOf</li>
                     </a>
 
-                    <a href="perimeterOf.html">
+                    <a href="./perimeterOf.html">
                         <li class="methods-element">perimeterOf</li>
                     </a>
 
-                    <a href="">
+                    <a href="./ofConjunts.html">
                         <li class="methods-element">ofConjunts</li>
                     </a>
 
-                    <a href="">
+                    <a href="./statistic.html">
                         <li class="methods-element">statistic</li>
                     </a>
-                    <a href="">
+                    <a href="./geometryCart.html">
                         <li class="methods-element">geometryCart</li>
                     </a>
 
-                    <a href="">
+                    <a href="./equations.html">
                         <li class="methods-element">equations</li>
                     </a>
-                    <a href="">
+                    <a href="./formTools.html">
                         <li class="methods-element">formTools</li>
                     </a>
-                    <a href="">
+                    <a href="./stack.html">
                         <li class="methods-element">stack</li>
                     </a>
-                    <a href="">
+                    <a href="./queue.html">
                         <li class="methods-element">queue</li>
                     </a>
-                    <a href="">
+                    <a href="./linkedList.html">
                         <li class="methods-element">linkedList</li>
                     </a>
-                    <a href="">
-                        <li class="methods-element">generateString</li>
+                    <a href="./generate.html">
+                        <li class="methods-element">generate</li>
                     </a>
 
-                    <a href="">
+                    <a href="./sorts.html#binarySearch">
                         <li class="methods-element">binarySearch</li>
                     </a>
-                    <a href="">
+                    <a href="./sorts.html#bubbleSort">
                         <li class="methods-element">bubbleSort</li>
                     </a>
-                    <a href="">
+                    <a href="./sorts.html#quickSort">
                         <li class="methods-element">quickSort</li>
                     </a>
-                    <a href="">
+                    <a href="./typeMethod.html">
                         <li class="methods-element">typeofMethod</li>
                     </a>
-                    <a href="">
+                    <a href="./functionTest.html">
                         <li class="methods-element">functionTest</li>
                     </a>
 
