--- a/Pages/ofArray.html
+++ b/Pages/ofArray.html
@@ -62,64 +62,64 @@
                 </a>
 
                 <ul class="methods">
-
-                    <a href="">
+                    <a href="ofArray.html">
                         <li class="methods-element">ofArray</li>
                     </a>
 
-                    <a href="areaOf.html">
+                    <a href="">
                         <li class="methods-element">areaOf</li>
                     </a>
 
-                    <a href="perimeterOf.html">
+                    <a href="./perimeterOf.html">
                         <li class="methods-element">perimeterOf</li>
                     </a>
 
-                    <a href="">
+                    <a href="./ofConjunts.html">
                         <li class="methods-element">ofConjunts</li>
                     </a>
 
-                    <a href="">
+                    <a href="./statistic.html">
                         <li class="methods-element">statistic</li>
                     </a>
-                    <a href="">
+                    <a href="./geometryCart.html">
                         <li class="methods-element">geometryCart</li>
                     </a>
 
-                    <a href="">
+                    <a href="./equations.html">
                         <li class="methods-element">equations</li>
                     </a>
-                    <a href="">
+                    <a href="./formTools.html">
                         <li class="methods-element">formTools</li>
                     </a>
-                    <a href="">
+                    <a href="./stack.html">
                         <li class="methods-element">stack</li>
                     </a>
-                    <a href="">
+                    <a href="./queue.html">
                         <li class="methods-element">queue</li>
                     </a>
-                    <a href="">
+                    <a href="./linkedList.html">
                         <li class="methods-element">linkedList</li>
                     </a>
-                    <a href="">
-                        <li class="methods-element">generateString</li>
+                    <a href="./generate.html">
+                        <li class="methods-element">generate</li>
                     </a>
 
-                    <a href="">
+                    <a href="./sorts.html#binarySearch">
                         <li class="methods-element">binarySearch</li>
                     </a>
-                    <a href="">
+                    <a href="./sorts.html#bubbleSort">
                         <li class="methods-element">bubbleSort</li>
                     </a>
-                    <a href="">
+                    <a href="./sorts.html#quickSort">
                         <li class="methods-element">quickSort</li>
                     </a>
-                    <a href="">
+                    <a href="./typeMethod.html">
                         <li class="methods-element">typeofMethod</li>
                     </a>
-                    <a href="">
+                    <a href="./functionTest.html">
                         <li class="methods-element">functionTest</li>
                     </a>
+
 
 
                 </ul>
@@ -145,7 +145,7 @@
                                 class="method2">log</span><span>(<span class="keyword">ofArray</span><span>.</span><span
                                     class="method">adition</span><span>([2,3,6])</span>)</span>
                             <br>
-                            <span class="puntuation">//La salida por consola seria: <br> 11 </span>
+                            <span class="puntuation">//La salida por consola seria: <br> >>> 11 </span>
                         </p>
 
                     </div>
@@ -168,7 +168,7 @@
                                 class="method2">log</span><span>(<span class="keyword">ofArray</span><span>.</span><span
                                     class="method">product</span><span>([4,5,7])</span>)</span>
                             <br>
-                            <span class="puntuation">//La salida por consola seria: <br> 140 </span>
+                            <span class="puntuation">//La salida por consola seria: <br> >>> 140 </span>
                         </p>
 
                     </div>
@@ -190,36 +190,14 @@
                                 class="method2">log</span><span>(<span class="keyword">ofArray</span><span>.</span><span
                                     class="method">average</span><span>([2,3,4])</span>)</span>
                             <br>
-                            <span class="puntuation">//La salida por consola seria: <br> 3 </span>
+                            <span class="puntuation">//La salida por consola seria: <br> >>> 3 </span>
                         </p>
 
                     </div>
 
-
-                </div style="width:100%;">
-
-                <div class="method-container">
-                    <p>
-                        <h6>ofArray.generateArray:</h6>
-
-                            este metodo, recibe como parametro un numero y genera un array con esa n cantidad de
-                            elementos los cuales son numeros aleatorios.
-
-                    </p>
-
-
-                    <div class="coding">
-                        <p>
-                            <span class="keyword">console</span><span>.</span><span
-                                class="method2">log</span><span>(<span class="keyword">ofArray</span><span>.</span><span
-                                    class="method">generateArray</span><span>(4)</span>)</span>
-                            <br>
-                            <span class="puntuation">//La salida por consola seria: <br> [432,756,53,2345] </span>
-                        </p>
-
-                    </div>
 
                 </div>
+
 
                 <div class="method-container">
 
@@ -248,7 +226,7 @@
                                         class="keyword">ofArray</span><span>.</span><span
                                         class="method">type</span><span>([2,23,90,80.8])</span>)</span>
                                 <br>
-                                <span class="puntuation">//La salida por consola seria: <br> "number" <br> debido a que
+                                <span class="puntuation">//La salida por consola seria: <br> >>> "number" <br> debido a que
                                     todos los
                                     elementos son de tipo numerico </span>
                             </p>
@@ -263,7 +241,7 @@
                                         class="keyword">ofArray</span><span>.</span><span
                                         class="method">type</span><span>(["juan","as","gris"])</span>)</span>
                                 <br>
-                                <span class="puntuation">//La salida por consola seria: <br> "string" <br>debido a que
+                                <span class="puntuation">//La salida por consola seria: <br> >>> "string" <br>debido a que
                                     todos los
                                     elementos son de tipo cadena</span>
                             </p>
@@ -277,7 +255,7 @@
                                         class="keyword">ofArray</span><span>.</span><span
                                         class="method">type</span><span>([54,"auto",true])</span>)</span>
                                 <br>
-                                <span class="puntuation">//La salida por consola seria: <br> "mixed" <br> debido a que
+                                <span class="puntuation">//La salida por consola seria: <br> >>> "mixed" <br> debido a que
                                     uno o mas elementos son de distinto tipo</span>
                             </p>
 
@@ -306,7 +284,7 @@
                                     mundo",231,true,9978,"txt"])</span>)</span>
                             <br>
                             <span class="puntuation">//La salida por consola seria: <br> {
-                                <br>
+                                <br> >>>
                                 '0': "hola mundo", <br>
                                 '1': 231, <br>
                                 '2': true, <br>
