--- a/Pages/sorts.html
+++ b/Pages/sorts.html
@@ -73,53 +73,53 @@
                         <li class="methods-element">areaOf</li>
                     </a>
 
-                    <a href="">
+                    <a href="./perimeterOf.html">
                         <li class="methods-element">perimeterOf</li>
                     </a>
 
-                    <a href="">
+                    <a href="./ofConjunts.html">
                         <li class="methods-element">ofConjunts</li>
                     </a>
 
-                    <a href="">
+                    <a href="./statistic.html">
                         <li class="methods-element">statistic</li>
                     </a>
-                    <a href="">
+                    <a href="./geometryCart.html">
                         <li class="methods-element">geometryCart</li>
                     </a>
 
-                    <a href="">
+                    <a href="./equations.html">
                         <li class="methods-element">equations</li>
                     </a>
-                    <a href="">
+                    <a href="./formTools.html">
                         <li class="methods-element">formTools</li>
                     </a>
-                    <a href="">
+                    <a href="./stack.html">
                         <li class="methods-element">stack</li>
                     </a>
-                    <a href="">
+                    <a href="./queue.html">
                         <li class="methods-element">queue</li>
                     </a>
-                    <a href="">
+                    <a href="./linkedList.html">
                         <li class="methods-element">linkedList</li>
                     </a>
-                    <a href="">
-                        <li class="methods-element">generateString</li>
+                    <a href="./generate.html">
+                        <li class="methods-element">generate</li>
                     </a>
 
-                    <a href="">
+                    <a href="./sorts.html#binarySearch">
                         <li class="methods-element">binarySearch</li>
                     </a>
-                    <a href="">
+                    <a href="./sorts.html#bubbleSort">
                         <li class="methods-element">bubbleSort</li>
                     </a>
-                    <a href="">
+                    <a href="./sorts.html#quickSort">
                         <li class="methods-element">quickSort</li>
                     </a>
-                    <a href="">
+                    <a href="./typeMethod.html">
                         <li class="methods-element">typeofMethod</li>
                     </a>
-                    <a href="">
+                    <a href="./functionTest.html">
                         <li class="methods-element">functionTest</li>
                     </a>
 
@@ -169,7 +169,7 @@
                         </p>
                     </div>
                 </div>
-<br>
+                <br>
                 <div class="method-container">
 
                     <h3 id="bubbleSort">bubbleSort:</h3>
@@ -211,7 +211,48 @@
                             </span>
                         </p>
                     </div>
-                </div>
+
+
+                    <div class="method-container">
+
+                        <h3 id="binarySearch"> binarySearch:</h3>
+
+
+                        <p>Este metodo es un algoritmo que encuentra la posicion de un valor dentro de un array ordenado
+                            aqui se maneja como
+                            una funcion, de la siguiente forma, recibe 2 parametros el valor a buscar y el array, nos
+                            retorna la poscion del elemento y si este no existe nos retorna false</p>
+                        <div class="coding">
+                            <p>
+                                <span class="puntuation">// Lo primero que debemos tener es un array ordenado</span>
+                                <br>
+                                <span class="keyword">let</span> <span>array = [2,12,42,89,190];</span> <br> <br>
+                                <span class="puntuation">// Procedemos a encontrar uno de sus valores con
+                                    binarySearch</span> <br>
+                                <span class="keyword">console</span><span>.</span><span
+                                    class="method2">log</span><span>(<span
+                                        class="method">binarySearch</span><span>(12,array)</span>)</span>
+                                <br>
+                                <span class="puntuation">//La salida por consola seria: <br> >>> 1 </span>
+                            </p>
+                            <p>Caso de ejemplo 2</p>
+
+                            <p>
+                                <span class="puntuation">// Lo primero que debemos tener es un array ordenado</span>
+                                <br>
+                                <span class="keyword">let</span> <span>array = [1,34,23,56,78];</span> <br> <br>
+                                <span class="puntuation">// Procedemos a encontrar uno de sus valores con
+                                    binarySearch</span> <br>
+                                <span class="keyword">console</span><span>.</span><span
+                                    class="method2">log</span><span>(<span
+                                        class="method">binarySearch</span><span>(90,array)</span>)</span>
+                                <br>
+                                <span class="puntuation">//La salida por consola seria: <br> >>> false </span>
+                            </p>
+                        </div>
+                        <br>
+
+                    </div>
             </article>
 
         </section>
