--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <a href="">
                         <li class="header-nav-element">Sobre ET</li>
                     </a>
-                    <a href="">
+                    <a href="./Pages/methods.html">
                         <li class="header-nav-element">Metodos</li>
                     </a>
                 </ul>
@@ -78,37 +78,37 @@
                         <li class="methods-element">perimeterOf</li>
                     </a>
 
-                    <a href="">
+                    <a href="./Pages/ofConjunts.html">
                         <li class="methods-element">ofConjunts</li>
                     </a>
 
-                    <a href="">
+                    <a href="./Pages/statistic.html">
                         <li class="methods-element">statistic</li>
                     </a>
-                    <a href="">
+                    <a href="./Pages/geometryCart.html">
                         <li class="methods-element">geometryCart</li>
                     </a>
 
-                    <a href="">
+                    <a href="./Pages/equations.html">
                         <li class="methods-element">equations</li>
                     </a>
-                    <a href="">
+                    <a href="./Pages/formTools.html">
                         <li class="methods-element">formTools</li>
                     </a>
-                    <a href="">
+                    <a href="./Pages/stack.html">
                         <li class="methods-element">stack</li>
                     </a>
-                    <a href="">
+                    <a href="./Pages/queue.html">
                         <li class="methods-element">queue</li>
                     </a>
-                    <a href="">
+                    <a href="./Pages/linkedList.html">
                         <li class="methods-element">linkedList</li>
                     </a>
-                    <a href="">
-                        <li class="methods-element">generateString</li>
+                    <a href="./Pages/generate.html">
+                        <li class="methods-element">generate</li>
                     </a>
 
-                    <a href="">
+                    <a href="./Pages/sorts.html#binarySearch">
                         <li class="methods-element">binarySearch</li>
                     </a>
                     <a href="./Pages/sorts.html#bubbleSort">
@@ -117,10 +117,10 @@
                     <a href="./Pages/sorts.html#quickSort">
                         <li class="methods-element">quickSort</li>
                     </a>
-                    <a href="">
+                    <a href="./Pages/typeMethod.html">
                         <li class="methods-element">typeofMethod</li>
                     </a>
-                    <a href="">
+                    <a href="./Pages/functionTest.html">
                         <li class="methods-element">functionTest</li>
                     </a>
 
