--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <nav class="header-nav">
                 <ul class="header-nav-list">
 
-                    <a href="">
+                    <a href="#download">
                         <li class="header-nav-element">Descargar</li>
                     </a>
 
@@ -165,7 +165,7 @@
 
         </section>
         <section>
-            <h2 class="center">Descargar Easy Tools Js</h2>
+            <h2 class="center" id="download">Descargar Easy Tools Js</h2>
             <article class="download-github">
 
 
