--- a/Pages/generate.html
+++ b/Pages/generate.html
@@ -36,13 +36,11 @@
                     <a href="../index.html">
                         <li class="header-nav-element">Inicio</li>
                     </a>
-                    <a href="">
+                    <a href="../index.html#download">
                         <li class="header-nav-element">Descargar</li>
                     </a>
 
-                    <a href="">
-                        <li class="header-nav-element">Sobre ET</li>
-                    </a>
+                   
                     <a href="./methods.html">
                         <li class="header-nav-element">Metodos</li>
                     </a>
