added changes in responsive

--- a/Pages/geometryCart.html
+++ b/Pages/geometryCart.html
@@ -145,7 +145,7 @@
                             <span class="keyword">console</span><span>.</span><span
                                 class="method2">log</span><span>(<span
                                     class="keyword">geometryCart</span><span>.</span><span
-                                    class="method">equationR</span><span>(2,3,7,6)</span>)</span>
+                                    class="method">equation</span><span>(2,3,7,6)</span>)</span>
                             <br>
                             <span class="puntuation">//La salida por consola seria: <br> >>> y=-1x+9  </span>
                         </p>
