--- a/Pages/ofConjunts.html
+++ b/Pages/ofConjunts.html
@@ -215,7 +215,7 @@
                                     class="keyword">ofConjunts</span><span>.</span><span
                                     class="method">simetricDiference</span><span>( <br> [2,"bt","jak"],[21,"bt",true])</span>)</span>
                             <br>
-                            <span class="puntuation">//La salida por consola seria: >>> [ 2, 'jak', 21, true ]</span>
+                            <span class="puntuation">//La salida por consola seria: <br> >>> [ 2, 'jak', 21, true ]</span>
                         </p>
 
                     </div>
@@ -237,7 +237,7 @@
                                     class="keyword">ofConjunts</span><span>.</span><span
                                     class="method">complement</span><span>( <br> [1,"cd",true,"a"],["f",true,"ai",false])</span>)</span>
                             <br>
-                            <span class="puntuation">//La salida por consola seria: >>> [ 1, 'cd', 'a' ]</span>
+                            <span class="puntuation">//La salida por consola seria: <br> >>> [ 1, 'cd', 'a' ]</span>
                         </p>
 
                     </div>
