--- a/Pages/perimeterOf.html
+++ b/Pages/perimeterOf.html
@@ -147,7 +147,7 @@
                                     class="keyword">perimeterOf</span><span>.</span><span
                                     class="method">square</span><span>(11)</span>)</span>
                             <br>
-                            <span class="puntuation">//La salida por consola seria: <br> 44 </span>
+                            <span class="puntuation">//La salida por consola seria: <br >>> 44 </span>
                         </p>
 
                     </div>
@@ -171,7 +171,7 @@
                                     class="keyword">perimeterOf</span><span>.</span><span
                                     class="method">triangule</span><span>(4,3,5)</span>)</span>
                             <br>
-                            <span class="puntuation">//La salida por consola seria: <br> 12 </span>
+                            <span class="puntuation">//La salida por consola seria: <br> >>> 12 </span>
                         </p>
 
                     </div>
@@ -194,7 +194,7 @@
                                     class="keyword">perimeterOf</span><span>.</span><span
                                     class="method">circle</span><span>(17)</span>)</span>
                             <br>
-                            <span class="puntuation">//La salida por consola seria: <br> 106.814 </span>
+                            <span class="puntuation">//La salida por consola seria: <br> >>> 106.814 </span>
                         </p>
 
                     </div>
@@ -218,7 +218,7 @@
                                     class="keyword">perimeterOf</span><span>.</span><span
                                     class="method">rectangule</span><span>(7,6)</span>)</span>
                             <br>
-                            <span class="puntuation">//La salida por consola seria: <br> 26 </span>
+                            <span class="puntuation">//La salida por consola seria: <br> >>> 26 </span>
                         </p>
 
                     </div>
@@ -242,7 +242,7 @@
                                     class="keyword">perimeterOf</span><span>.</span><span
                                     class="method">cube</span><span>(11,5,9)</span>)</span>
                             <br>
-                            <span class="puntuation">//La salida por consola seria: <br> 100 </span>
+                            <span class="puntuation">//La salida por consola seria: <br> >>> 100 </span>
                         </p>
 
                     </div>
@@ -266,7 +266,7 @@
                                     class="keyword">perimeterOf</span><span>.</span><span
                                     class="method">shepere</span><span>(9)</span>)</span>
                             <br>
-                            <span class="puntuation">//La salida por consola seria: <br> 56.548 </span>
+                            <span class="puntuation">//La salida por consola seria: <br> >>> 56.548 </span>
                         </p>
 c
                     </div>
@@ -289,7 +289,7 @@ c
                                     class="keyword">perimeterOf</span><span>.</span><span
                                     class="method">nAgono</span><span>([5,6,5,6],4)</span>)</span>
                             <br>
-                            <span class="puntuation">//La salida por consola seria: <br> 22 </span>
+                            <span class="puntuation">//La salida por consola seria: <br> >>> 22 </span>
                         </p>
 
                     </div>
