--- a/Pages/stack.html
+++ b/Pages/stack.html
@@ -196,7 +196,7 @@
 
                         <h6>El metodo viewElements</h6>
                         
-                        <p>//Este metodo nos devuelve todos los elementos de la pila.</p>
+                        <p class="puntuation">//Este metodo nos devuelve todos los elementos de la pila.</p>
                         <p>
                             <span class="keyword">console</span><span>.</span><span
                                 class="method2">log</span><span>(<span class="keyword">pila</span><span>.</span><span
