--- a/Pages/ofArray.html
+++ b/Pages/ofArray.html
@@ -64,7 +64,7 @@
                         <li class="methods-element">ofArray</li>
                     </a>
 
-                    <a href="">
+                    <a href="./areaOf.html">
                         <li class="methods-element">areaOf</li>
                     </a>
 
@@ -131,7 +131,7 @@
                     <p>
                         <h6>ofArray.adition:</h6>
 
-                            este metodo, recibe como parametro un arreglo y calcula la suma de todos los elementos de
+                            Este metodo, recibe como parametro un arreglo y calcula la suma de todos los elementos de
                             este,
                             siempre y cuando sean elementos de tipo numerico de la siguiente forma.
 
@@ -154,7 +154,7 @@
 
                         <h6>ofArray.product:</h6>
 
-                        este metodo, recibe como parametro un arreglo y calcula el producto de todos los elementos de
+                        Este metodo, recibe como parametro un arreglo y calcula el producto de todos los elementos de
                         este,
                         siempre y cuando sean elementos de tipo numerico de la siguiente forma.
                     </p>
@@ -177,7 +177,7 @@
 
                         <h6>ofArray.average:</h6>
 
-                        este metodo, recibe como parametro un arreglo y calcula el promedio de todos los elementos de
+                        Este metodo, recibe como parametro un arreglo y calcula el promedio de todos los elementos de
                         este,
                         siempre y cuando sean elementos de tipo numerico de la siguiente forma.
                     </p>
@@ -202,7 +202,7 @@
                     <p>
                         <h6>ofArray.type:</h6>
 
-                        este metodo, recibe como parametro un arreglo, evalua cada uno de los elementos y dice que
+                        Este metodo, recibe como parametro un arreglo, evalua cada uno de los elementos y dice que
                         tipo de arreglo retorna
                         6 tipos de valores en forma de string:
                         <ul>
@@ -269,7 +269,7 @@
 
                         <h6>ofArray.arrayTObject:</h6>
 
-                        este metodo, recibe como parametro un arreglo y devuelve un objeto, del cual las key son los
+                        Este metodo, recibe como parametro un arreglo y devuelve un objeto, del cual las key son los
                         indices del array y los values los valores que tenia inicialmente la poscision del array
                     </p>
 
@@ -281,8 +281,8 @@
                                     class="method">arrayTObject</span><span>(["hola
                                     mundo",231,true,9978,"txt"])</span>)</span>
                             <br>
-                            <span class="puntuation">//La salida por consola seria: <br> {
-                                <br> >>>
+                            <span class="puntuation">//La salida por consola seria: <br> >>> {
+                                <br> 
                                 '0': "hola mundo", <br>
                                 '1': 231, <br>
                                 '2': true, <br>
