added methods page + interconectivity

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <section class="main">
             <article class="nav-methods">
 
-                <a href="">
+                <a href="./Pages/methods.html">
                     <p>Metodos y funciones</p>
                 </a>
 
