--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <li class="header-nav-element">Descargar</li>
                     </a>
 
-                    <a href="">
+                    <a href="#about">
                         <li class="header-nav-element">Sobre ET</li>
                     </a>
                     <a href="./Pages/methods.html">
@@ -128,7 +128,7 @@
                 </ul>
             </article>
             <article>
-                <h1>
+                <h1 id="about">
                     Sobre Easy Tools Js Lybrary.
                 </h1>
                 <div>
@@ -197,7 +197,7 @@
         <section>
 
             <div class="tutorial">
-                <video src="./Sources/install.mp4" controls width="90%" height="40%"></video>
+                <video src="./Sources/install.mp4" controls width="100%" height="40%"></video>
             </div>
 
         </section>
